# rustvoxels

./: Cargo.toml  README.md
assets/models/garfield/: garfield.mtl
assets/scenes/: garfield.evox  tram.evox
shaders/: clear.comp  denoiser.frag  mipmap.comp  model_renderer.frag  model_renderer.vert  raytrace.frag  raytrace.frag.spv  raytrace.vert  raytrace.vert.spv  raytrace.vert.wgsl  raytrace.wgsl  texture_renderer.frag  texture_renderer.vert  voxelizer.frag  voxelizer.vert
src/: main.rs
src/config/: mod.rs
src/game/: camera.rs  mod.rs  player.rs  transform.rs
src/game/entity/: handle.rs  mod.rs
src/game/entity/components/: mod.rs
src/game/entity/components/model/: mod.rs  texture.rs
src/game/logic/: keyboard_tracker.rs  mod.rs
src/game/world/: collector.rs  global_state.rs  mod.rs  voxel_grid.rs  world.rs
src/renderer/: clear.rs  common_uniforms.rs  glsl_loader.rs  gui_renderer.rs  mod.rs  render_context.rs  texture_atlas.rs
src/renderer/denoiser/: mod.rs  uniforms.rs
src/renderer/mipmapper/: mod.rs  uniforms.rs
src/renderer/model_renderer/: mod.rs  uniforms.rs
src/renderer/raytracer/: mod.rs  uniforms.rs
src/renderer/texture_renderer/: mod.rs  uniforms.rs
src/renderer/voxelizer/: mod.rs  uniforms.rs
src/ui/: mod.rs
