[package]
name = "rustvoxels"
version = "0.1.0"
authors = ["Id405 <8o7wermobile@gmail.com>"]
edition = "2018"
resolver="2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.7", features = [ "derive" ] }
cgmath = { version = "0.18.0", features = [ "mint" ] }
env_logger = "0.8.4"
futures = "0.3.15"
naga = "0.6.3"
shaderc = "0.7.2"
wgpu = { version = "0.10", features = [ "spirv" ] }
winit = "0.25.0"
