[package]
name = "rustvoxels"
version = "0.1.0"
authors = ["Id405 <8o7wermobile@gmail.com>"]
edition = "2018"
resolver="2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.7", features = [ "derive" ] }
crevice = "0.7.1"
env_logger = "0.8.4"
futures = "0.3.15"
glam = { version = "0.17.3", features = [ "mint" ] }
mint = "0.5.7"
naga = "0.6.3"
shaderc = "0.7.2"
wgpu = { version = "0.10", features = [ "spirv" ] }
winit = "0.25.0"
