[package]
name = "rustvoxels"
version = "0.1.0"
authors = ["Id405 <8o7wermobile@gmail.com>"]
edition = "2018"
resolver="2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.7", features = [ "derive" ] }
clap = "3.0.4"
crevice = "0.8.0"
env_logger = "0.9.0"
futures = "0.3.15"
glam = { version = "0.20.2", features = [ "mint" ] }
image = "0.23.14"
imgui = "0.8.2"
imgui-wgpu = "0.19.0"
imgui-winit-support = { version = "0.8", default-features = false, features = ["winit-26"] }
mint = "0.5.7"
naga = "0.8.1"
rayon = "1.5.1"
shaderc = "0.7.2"
wgpu = { version = "0.12", features = [ "spirv" ] }
winit = "0.26.1"
